Getting Billthoven not to crash.

--- a/src/main/deploy/robotConfigs/Billthoven/robot.conf
+++ b/src/main/deploy/robotConfigs/Billthoven/robot.conf
@@ -1,17 +1,9 @@
 subsystems {
-  billArmRotate {
-
-  }
-  billClimber {
-
-  }
-  billEndEffectorPosition {
-
-  }
-  billFeeder {
-
-  }
-  billShooter {
-    
-  }
+  #billArmRotate {}
+  #billClimber {}
+  #billEndEffectorPosition {}
+  #billFeeder {}
+  #billShooter {}
+  swervedrivetrain{}
+  
 }
