--- a/src/main/deploy/robotConfigs/SwerveBot/RedAutonomous.conf
+++ b/src/main/deploy/robotConfigs/SwerveBot/RedAutonomous.conf
@@ -2,7 +2,7 @@ AmpScore {
   # Waypoints and Angles to score preloaded note in Amp
   WayPoint1 = 56 # 72 1/2 - 33/2
   Angle1 = 270
-  WayPoint2 = -17.75
+  WayPoint2 = -2     #-17.75
   # Waypoints and Angles to score R1 Note in Amp
   WayPoint3 = 30.5 # 47 - 33/2
   Angle2 = 0
