Commissioned the robot

--- a/src/main/deploy/robotConfigs/Billthoven/robot.conf
+++ b/src/main/deploy/robotConfigs/Billthoven/robot.conf
@@ -1,17 +1,8 @@
 subsystems {
-  billArmRotate {
-
-  }
-  billClimber {
-
-  }
-  billEndEffectorPosition {
-
-  }
-  billFeeder {
-
-  }
-  billShooter {
-    
-  }
+  swervedrivetrain {  }
+  billArmRotate {  }
+  #billClimber {  }
+  #billEndEffectorPosition {  }
+  billFeeder {  }
+  billShooter {   }
 }
