--- a/src/main/deploy/robotConfigs/Billthoven/billshooter.conf
+++ b/src/main/deploy/robotConfigs/Billthoven/billshooter.conf
@@ -1,8 +1,8 @@
 ports{
-    shooterWheels = 10
+    shooterMotor = 10
 }
 
-shooterWheels{
+shooterMotor{
     inverted=false    
     hasEncoder=true
     encoderInverted=false
