Made it so the note stops when detected. UNFINISHED - Need to fix {} in RunBillFeeder.java

--- a/src/main/deploy/robotConfigs/Billthoven/billshooter.conf
+++ b/src/main/deploy/robotConfigs/Billthoven/billshooter.conf
@@ -3,7 +3,7 @@ ports{
 }
 
 shooterMotor{
-    inverted=false    
+    inverted=true    
     hasEncoder=true
     encoderInverted=false
     currentLimit=60
