add a rev PCH compressor

--- a/src/main/deploy/robotConfigs/Billthoven/robot.conf
+++ b/src/main/deploy/robotConfigs/Billthoven/robot.conf
@@ -1,8 +1,9 @@
 subsystems {
-  swervedrivetrain {  }
-  billArmRotate {  }
+  swervedrivetrain {}
+  billArmRotate {}
   #billClimber {  }
   #billEndEffectorPosition {  }
-  billFeeder {  }
-  billShooter {   }
+  billFeeder {}
+  billShooter {}
+  compressor {}
 }
