Added subsystems group commands to all autonomous modes commands.

--- a/src/main/deploy/robotConfigs/SwerveBot/commandconstants.conf
+++ b/src/main/deploy/robotConfigs/SwerveBot/commandconstants.conf
@@ -14,4 +14,13 @@ MoveUsingEncoder {
     positionTolerance=0.5
     velocityTolerance=3
 }
+
+ArmRotate {
+    Kp = 0.02
+    Ki = 0.0002
+    Kd = 0
+    minOutputToMove = 0
+    tolerance = 3
+
+}
 moveUsingGyroP = 0.001
