--- a/src/main/deploy/robotConfigs/Billthoven/billarmrotate.conf
+++ b/src/main/deploy/robotConfigs/Billthoven/billarmrotate.conf
@@ -2,29 +2,29 @@ ports {
   motor1 = 11
 
   solenoidbrake {
-    forwardChannel = 3
-    reverseChannel = 2
+    forwardChannel = 1
+    reverseChannel = 0
   }
 
 }
 
 motor1 {
   inverted=false
-    hasEncoder=true
-    encoderInverted=false
-    currentLimit=60
-    brakeMode=true
-    encoderTicksPerRotation=42
-    hasForwardLimitSwitch=false
-    hasReverseLimitSwitch=false
+  hasEncoder=true
+  encoderInverted=true
+  currentLimit=60
+  brakeMode=true
+  encoderTicksPerRotation=42
+  hasForwardLimitSwitch=false
+  hasReverseLimitSwitch=false
 }
 
 
 motorController=sparkMax
 
-maxAngle = 95.8
+maxAngle = 103.8
 
-minAngle = 0
+minAngle = 12
 
 armKValues = [
   70, 0.04,
@@ -37,3 +37,11 @@ armKValues = [
   270, -0.059,
   289, -0.046
 ]
+
+ArmRotate {
+  Kp = 0
+  Ki = 0
+  Kd = 0
+  minOutputToMove = 0
+  tolerance = 2
+}
