Tuning arm PID loops and refactored SparkMaxController to deal with the absolute encoder "correctly"

--- a/src/main/deploy/robotConfigs/Billthoven/billarmrotate.conf
+++ b/src/main/deploy/robotConfigs/Billthoven/billarmrotate.conf
@@ -10,8 +10,9 @@ ports {
 
 motor1 {
   inverted=false
-  hasEncoder=true
-  encoderInverted=true
+  hasAbsoluteEncoder=true
+  absoluteEncoderInverted=true
+  absoluteEncoderZeroOffset=0.6964772
   currentLimit=60
   brakeMode=true
   encoderTicksPerRotation=42
