--- a/src/main/deploy/robotConfigs/Billthoven/billclimber.conf
+++ b/src/main/deploy/robotConfigs/Billthoven/billclimber.conf
@@ -4,8 +4,9 @@ ports {
 
 winch {
     inverted = false
-    hasEncoder = true
-    encoderInverted = true
+    hasAbsoluteEncoder=true
+    absoluteEncoderInverted=true
+    absoluteEncoderZeroOffset=0
     currentLimit = 60
     brakeMode = true
     hasForwardLimitSwitch = false
