--- a/src/main/deploy/robotConfigs/Billthoven/billfeeder.conf
+++ b/src/main/deploy/robotConfigs/Billthoven/billfeeder.conf
@@ -5,8 +5,7 @@ ports{
 
 feederMotor{
     inverted=false
-    hasEncoder=true
-    encoderInverted=false
+    hasAbsoluteEncoder=false
     currentLimit=60
     brakeMode=true
     hasForwardLimitSwitch=false
