--- a/src/main/deploy/robotConfigs/Billthoven/billshooter.conf
+++ b/src/main/deploy/robotConfigs/Billthoven/billshooter.conf
@@ -4,8 +4,7 @@ ports{
 
 shooterMotor{
     inverted=false    
-    hasEncoder=true
-    encoderInverted=false
+    hasAbsoluteEncoder=false
     currentLimit=60
     brakeMode=false
     hasForwardLimitSwitch=false
