Fixed angles and did tuning

--- a/src/main/deploy/robotConfigs/Billthoven/billarmrotate.conf
+++ b/src/main/deploy/robotConfigs/Billthoven/billarmrotate.conf
@@ -9,7 +9,7 @@ ports {
 }
 
 motor1 {
-  inverted=false
+  inverted=true
   hasAbsoluteEncoder=true
   absoluteEncoderInverted=true
   absoluteEncoderZeroOffset=0.6964772
@@ -23,9 +23,9 @@ motor1 {
 
 motorController=sparkMax
 
-maxAngle = 103.8
+maxAngle = 350
 
-minAngle = 12
+minAngle = 255
 
 armKValues = [
   70, 0.04,
