--- a/src/main/deploy/robotConfigs/SwerveBot/swervedrivetrain.conf
+++ b/src/main/deploy/robotConfigs/SwerveBot/swervedrivetrain.conf
@@ -12,6 +12,13 @@ SwerveDriveConstants {
   voltageComp=12
   angleContinuousCurrentLimit=20
   driveContinuousCurrentLimit=60
+
+  #Drive motor ramp rate
+  drivekRampRate = 1
+
+  #Angle motor ramp rate 
+  anglekRampRate = 0
+
   #Angle motor PID values
   angleKP=0.05
   angleKI = 0.0
