--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
   "java.configuration.updateBuildConfiguration": "automatic",
   "java.server.launchMode": "Standard",
+  "java.format.settings.url": "${workspaceFolder}/frc4905.eclipseformat.xml",
   "files.exclude": {
     "**/.git": true,
     "**/.svn": true,
