Ramp rate value for drive motor

--- a/src/main/deploy/robotConfigs/Billthoven/swervedrivetrain.conf
+++ b/src/main/deploy/robotConfigs/Billthoven/swervedrivetrain.conf
@@ -13,7 +13,12 @@ SwerveDriveConstants {
   angleContinuousCurrentLimit=20
   driveContinuousCurrentLimit=60
 
+  #Drive motor ramp rate
+  drivekRampRate = 0.2
 
+  #Angle motor ramp rate 
+  anglekRampRate = 0
+  
   #Angle motor PID values
   angleKP=0.05
   angleKI = 0.0
