Added a pMap for arm rotate PID loop. Edited the kMap values to reflect new values found while tuning.

--- a/src/main/deploy/robotConfigs/Billthoven/billarmrotate.conf
+++ b/src/main/deploy/robotConfigs/Billthoven/billarmrotate.conf
@@ -28,15 +28,23 @@ maxAngle = 350
 minAngle = 255
 
 armKValues = [
-  70, 0.04,
-  90, 0.053,
-  113, 0.04,
-  124, 0.025,
-  180, 0,
-  234, -0.025,
-  242, -0.04,
-  270, -0.059,
-  289, -0.046
+  344, -0.0003,
+  267, -0.0001
+  #70, 0.04,
+  #90, 0.053,
+  #113, 0.04,
+  #124, 0.025,
+  #180, 0,
+  #234, -0.025,
+  #242, -0.04,
+  #270, -0.059,
+  #289, -0.046
+]
+
+armPValues = [
+  257, 0.1,
+  300, 0.2,
+  347, 0.3
 ]
 
 ArmRotate {
