started to fix the climber but unfinished

--- a/src/main/deploy/robotConfigs/Billthoven/billclimber.conf
+++ b/src/main/deploy/robotConfigs/Billthoven/billclimber.conf
@@ -11,5 +11,8 @@ winch {
     hasForwardLimitSwitch = false
     hasReverseLimitSwitch = false
 }
-maxExtendHeight = 202
-contractHeight = 2.5
+#this variable goes to when the hook is at its top point
+#this sould be the default starting point
+maxExtendHeight = -50   # 0 
+#this variable goes to when the hook is at its lowest point and the robot is fully pulled up
+contractHeight = -150  #-213
