made the climber climb. in progress

--- a/src/main/deploy/robotConfigs/Billthoven/billclimber.conf
+++ b/src/main/deploy/robotConfigs/Billthoven/billclimber.conf
@@ -10,9 +10,10 @@ winch {
     brakeMode = true
     hasForwardLimitSwitch = false
     hasReverseLimitSwitch = false
+    kHardLimitFwdEn = true
 }
 #this variable goes to when the hook is at its top point
 #this sould be the default starting point
-maxExtendHeight = -50   # 0 
+maxExtendHeight = 0 
 #this variable goes to when the hook is at its lowest point and the robot is fully pulled up
-contractHeight = -150  #-213
+contractHeight = -200 #-213
