Renamed to make more logical sense, added buttons to Smart Dashboard and tested

--- a/src/main/deploy/robotConfigs/Billthoven/robot.conf
+++ b/src/main/deploy/robotConfigs/Billthoven/robot.conf
@@ -2,7 +2,7 @@ subsystems {
   swervedrivetrain {}
   billArmRotate {}
   billClimber {  }
-  #billEndEffectorPosition {  }
+  billEndEffectorPosition {  }
   billFeeder {}
   billShooter {}
   compressor {}
