made the Limit Switch not crash the robot

--- a/src/main/deploy/robotConfigs/Billthoven/billclimber.conf
+++ b/src/main/deploy/robotConfigs/Billthoven/billclimber.conf
@@ -8,7 +8,7 @@ winch {
     encoderInverted = true
     currentLimit = 60
     brakeMode = true
-    hasForwardLimitSwitch = false
+    hasForwardLimitSwitch = true
     hasReverseLimitSwitch = false
     kHardLimitFwdEn = true
 }
