created new tof sensor class and a distance sensor base class.

--- a/src/main/deploy/robotConfigs/SwerveBot/sensors.conf
+++ b/src/main/deploy/robotConfigs/SwerveBot/sensors.conf
@@ -5,3 +5,15 @@ sensors {
 navx {
   port=MXP
 }
+
+rearTof {
+  port=15
+  rangingMode ="Long"
+  sampleTime= 100
+  rangeOfInterest {
+    topLeftX = 0
+    topLeftY = 0 
+    bottomRightX = 16 
+    bottomRightY = 16 
+  }
+}
