made controller move the climber and added a override button. NOW WORKS

--- a/src/main/deploy/robotConfigs/Billthoven/billarmrotate.conf
+++ b/src/main/deploy/robotConfigs/Billthoven/billarmrotate.conf
@@ -9,19 +9,19 @@ ports {
 }
 
 motor1 {
-  inverted=true
-  hasAbsoluteEncoder=true
-  absoluteEncoderInverted=true
-  absoluteEncoderZeroOffset=0.6964772
-  currentLimit=60
-  brakeMode=true
-  encoderTicksPerRotation=42
-  hasForwardLimitSwitch=false
-  hasReverseLimitSwitch=false
+  inverted = true
+  hasAbsoluteEncoder = true
+  absoluteEncoderInverted = true
+  absoluteEncoderZeroOffset = 0.6964772
+  currentLimit = 60
+  brakeMode = true
+  encoderTicksPerRotation = 42
+  hasForwardLimitSwitch = false
+  hasReverseLimitSwitch = false
 }
 
 
-motorController=sparkMax
+motorController = sparkMax
 
 maxAngle = 350
 
