--- a/src/main/deploy/robotConfigs/Billthoven/billclimber.conf
+++ b/src/main/deploy/robotConfigs/Billthoven/billclimber.conf
@@ -1,20 +1,20 @@
-ports { 
+ports {
     winch = 12
 }
 
 winch {
-    inverted = false
-    hasAbsoluteEncoder=true
-    absoluteEncoderInverted=true
-    absoluteEncoderZeroOffset=0
+    inverted = true
+    hasAbsoluteEncoder = false
+    absoluteEncoderInverted = false
+    absoluteEncoderZeroOffset = 0
     currentLimit = 60
     brakeMode = true
-    hasForwardLimitSwitch = true
-    hasReverseLimitSwitch = false
+    hasForwardLimitSwitch = false
+    hasReverseLimitSwitch = true
     kHardLimitFwdEn = true
 }
 #this variable goes to when the hook is at its top point
 #this sould be the default starting point
-maxExtendHeight = 0 
+maxHeight = 0 
 #this variable goes to when the hook is at its lowest point and the robot is fully pulled up
-contractHeight = -200 #-213
+minHeight = -200 #-213
