Fixed errors in tof class

--- a/src/main/deploy/robotConfigs/SwerveBot/sensors.conf
+++ b/src/main/deploy/robotConfigs/SwerveBot/sensors.conf
@@ -2,7 +2,7 @@ sensors {
 
   rearTof {
     port=15
-    rangingMode ="Long"
+    rangingMode ="Short" #short > 1300mm (51.2in), long > 4000mm(157.5in), medium > 2700mm(106.3in)
     sampleTime= 100
     rangeOfInterest {
       topLeftX = 0
