--- a/src/main/deploy/robotConfigs/SwerveBot/sensors.conf
+++ b/src/main/deploy/robotConfigs/SwerveBot/sensors.conf
@@ -2,14 +2,15 @@ sensors {
 
   rearTof {
     port=15
-    rangingMode ="Short" #short > 1300mm (51.2in), long > 4000mm(157.5in), medium > 2700mm(106.3in)
+    rangingMode ="Short" 
     sampleTime= 100
-    rangeOfInterest {
+    rangeOfInterest {      
       topLeftX = 0
       topLeftY = 0 
-      bottomRightX = 16 
-      bottomRightY = 16 
+      bottomRightX = 15
+      bottomRightY = 15
     }
+
   }
   
 }
