--- a/src/main/deploy/robotConfigs/Billthoven/sensors.conf
+++ b/src/main/deploy/robotConfigs/Billthoven/sensors.conf
@@ -1,7 +1,19 @@
 sensors {
-
+    cameras {
+        camera0 {
+            port = 0
+            width = 320
+            height = 240
+            fps = 8
+        }
+        #camera1 {
+            #port = 1
+            #width = 320
+            #height = 240
+           # fps = 8
+        #}
+    }
 }
-
 navx {
   port=MXP
 }
