Added to Billthoven commands conf file and tested tof parameters

--- a/src/main/deploy/robotConfigs/SwerveBot/commandconstants.conf
+++ b/src/main/deploy/robotConfigs/SwerveBot/commandconstants.conf
@@ -24,3 +24,12 @@ ArmRotate {
 
 }
 moveUsingGyroP = 0.001
+
+MoveUsingDistanceSensor{
+    Kp = 0.01625
+    Ki = 0
+    Kd = 0
+    minOutputToMove = 0.02
+    positionTolerance=0.4
+    velocityTolerance=3
+}
