--- a/src/main/deploy/robotConfigs/SwerveBot/sensors.conf
+++ b/src/main/deploy/robotConfigs/SwerveBot/sensors.conf
@@ -2,8 +2,8 @@ sensors {
 
   rearTof {
     port=15
-    rangingMode ="Short" 
-    sampleTime= 20
+    rangingMode ="Medium" 
+    sampleTime= 33
     rangeOfInterest {      
       topLeftX = 0
       topLeftY = 0 
