--- a/src/main/deploy/robotConfigs/Billthoven/commandconstants.conf
+++ b/src/main/deploy/robotConfigs/Billthoven/commandconstants.conf
@@ -22,3 +22,12 @@ ArmRotate {
     tolerance = 3
 }
 moveUsingGyroP = 0.001
+
+MoveUsingDistanceSensor{
+    Kp = 0.01625
+    Ki = 0
+    Kd = 0
+    minOutputToMove = 0.02
+    positionTolerance=0.4
+    velocityTolerance=3
+}
