--- a/src/main/deploy/robotConfigs/Billthoven/billclimber.conf
+++ b/src/main/deploy/robotConfigs/Billthoven/billclimber.conf
@@ -17,4 +17,4 @@ winch {
 #this sould be the default starting point
 maxHeight = 0 
 #this variable goes to when the hook is at its lowest point and the robot is fully pulled up
-minHeight = -200 #-213
+minHeight = -225
