--- a/src/main/deploy/robotConfigs/Billthoven/sensors.conf
+++ b/src/main/deploy/robotConfigs/Billthoven/sensors.conf
@@ -4,6 +4,7 @@ sensors {
     port=15
     rangingMode ="Medium" 
     sampleTime= 33
+    sensorOffset_inches = -9
     rangeOfInterest {      
       topLeftX = 0
       topLeftY = 0 
