--- a/src/main/deploy/robotConfigs/Billthoven/BlueAutonomous.conf
+++ b/src/main/deploy/robotConfigs/Billthoven/BlueAutonomous.conf
@@ -38,6 +38,7 @@ DriveStation2Speaker{
   Angle2 = 27
   # Drive Towards centerline
   WayPoint3 = 20 # (x) We will figure out this number later
+  GyroOffset = 60
   
 }
 
@@ -52,6 +53,7 @@ DriveStation3SpeakerWithAmp{
   WayPoint5 = -13 # (28 1/2 - 33/2)
   Angle3 = 0
   WayPoint6 = 200 # (324 1/2 - 7) - ((72 1/2 + 33/2) + (X) X in not desided on
+  GyroOffset = -60
 }
 
 CentralSpeaker2Scores{
