New auto that scores and then gets out of the way

--- a/src/main/deploy/robotConfigs/Billthoven/RedAutonomous.conf
+++ b/src/main/deploy/robotConfigs/Billthoven/RedAutonomous.conf
@@ -71,3 +71,12 @@ EmergencyBackup{
   #Waypoints and Angles to move out of starting area
   WayPoint1 = 111
 }
+
+SideScoreLeaveHome{
+  WayPoint1 = 10
+  Angle1 = 270
+  WayPoint2 = 99
+  Angle2 = 0
+  WayPoint3 = 111
+  GyroOffset = 60
+}
