--- a/src/main/deploy/robotConfigs/Billthoven/BlueAutonomous.conf
+++ b/src/main/deploy/robotConfigs/Billthoven/BlueAutonomous.conf
@@ -70,3 +70,12 @@ EmergencyBackup{
   #Waypoints and Angles to move out of starting area
   WayPoint1 = 111
 }
+
+SideScoreLeaveHome{
+  WayPoint1 = 10
+  Angle1 = 90
+  WayPoint2 = 99
+  Angle2 = 0
+  WayPoint3 = 111
+  GyroOffset = -60
+}
