Fixed arm intake

--- a/src/main/deploy/robotConfigs/Billthoven/billshooter.conf
+++ b/src/main/deploy/robotConfigs/Billthoven/billshooter.conf
@@ -6,7 +6,7 @@ shooterMotor{
     inverted=true    
     hasAbsoluteEncoder=false
     currentLimit=60
-    brakeMode=false
+    brakeMode=true
     hasForwardLimitSwitch=false
     hasReverseLimitSwitch=false
     runshooterwheelvelocity{
