Photon vision has its baselines

--- a/src/main/deploy/robotConfigs/Billthoven/commandconstants.conf
+++ b/src/main/deploy/robotConfigs/Billthoven/commandconstants.conf
@@ -6,6 +6,14 @@ GyroPIDCommands {
     positionTolerance=2
     velocityTolerance=10
 }
+TurnToTarget {
+    TurningPTerm=0.0016
+    TurningITerm=0
+    TurningDTerm=0
+    minOutputToMove=0.0125
+    positionTolerance=2
+    velocityTolerance=10
+}
 MoveUsingEncoder {
     Kp = 0.00725 
     Ki = 0
