--- a/src/main/deploy/robotConfigs/SwerveBot/commandconstants.conf
+++ b/src/main/deploy/robotConfigs/SwerveBot/commandconstants.conf
@@ -6,6 +6,14 @@ GyroPIDCommands {
     positionTolerance=2
     velocityTolerance=10
 }
+TurnToTarget {
+    TurningPTerm=0.0025
+    TurningITerm=0
+    TurningDTerm=0
+    minOutputToMove=0
+    positionTolerance=2
+    velocityTolerance=10
+}
 MoveUsingEncoder {
     Kp = 0.00825
     Ki = 0
