Added framework for interpolating map for shooting rpm and angles

--- a/src/main/deploy/robotConfigs/Billthoven/billshooter.conf
+++ b/src/main/deploy/robotConfigs/Billthoven/billshooter.conf
@@ -31,4 +31,19 @@ shooterMotor{
         4000, 0.00009,
         5000, 0.0002
     ]
+    # distances are measured from swerve bot and should be remeasured if it misses - 4 inch from bumper to camera
+    shotShootingRPM=[
+        # from behind first white line
+        79, 3650,
+        # from podium
+        114, 3650,
+        # from middle of white and blue line
+        91, 
+        # from behind blue line
+        131,
+        # from white line corner
+        107,
+        # from in front of white line just behind stage
+        206,
+    ]
 }
