--- a/src/main/deploy/robotConfigs/Billthoven/billarmrotate.conf
+++ b/src/main/deploy/robotConfigs/Billthoven/billarmrotate.conf
@@ -40,7 +40,21 @@ armPValues = [
   330, 0.0525,
   350, 0.02
 ]
-
+# distances are measured from swerve bot and should be remeasured if it misses - 4 inch from bumper to camera
+shotArmAngle = [
+  # from behind first white line
+  79, 320,
+  # from podium
+  114, 315
+  # from middle of white and blue line
+  91, 
+  # from behind blue line
+  131,
+  # from white line corner
+  107,
+  # from in front of white line just behind stage
+  206,
+]
 ArmRotate {
   Kp = 0
   Ki = 0
