Set up framework to use a PID map for going up with the arm and a seperate one for going down.

--- a/src/main/deploy/robotConfigs/Billthoven/billarmrotate.conf
+++ b/src/main/deploy/robotConfigs/Billthoven/billarmrotate.conf
@@ -27,14 +27,28 @@ maxAngle = 351
 
 minAngle = 255
 
-armKValues = [
+armKValuesUp = [
   255, 0.0,
   300, -0.0002,
   330, -0.0003,
   350, -0.0002
 ]
 
-armPValues = [
+armPValuesUp = [
+  255, 0.04,
+  300, 0.065,
+  330, 0.0525,
+  350, 0.02
+]
+
+armKValuesDown = [
+  255, 0.0,
+  300, -0.0002,
+  330, -0.0003,
+  350, -0.0002
+]
+
+armPValuesDown = [
   255, 0.04,
   300, 0.065,
   330, 0.0525,
