started work on intergral clamps

--- a/src/main/deploy/robotConfigs/Billthoven/commandconstants.conf
+++ b/src/main/deploy/robotConfigs/Billthoven/commandconstants.conf
@@ -21,6 +21,7 @@ MoveUsingEncoder {
     minOutputToMove = 0.016
     positionTolerance=1.25
     velocityTolerance=3
+    iZone=2
 }
 ArmRotate {
     Kp = 0.02
