--- a/src/main/deploy/robotConfigs/SwerveBot/sensors.conf
+++ b/src/main/deploy/robotConfigs/SwerveBot/sensors.conf
@@ -6,6 +6,6 @@ navx {
   port=MXP
 }
 
-photonvision {
-  cameraname = Arducam_OV2311_USB_Camera
-}
+#photonvision {
+#  cameraname = Arducam_OV2311_USB_Camera
+#}
