--- a/src/main/deploy/robotConfigs/Billthoven/billarmrotate.conf
+++ b/src/main/deploy/robotConfigs/Billthoven/billarmrotate.conf
@@ -27,51 +27,25 @@ maxAngle = 351
 
 minAngle = 255
 
-armKValuesUp = [
+armKValues = [
   255, 0.0,
   300, -0.0002,
-  330, -0.03,
+  330, -0.0003,
   350, -0.0002
 ]
 
-armPValuesUp = [
-  255, 0.02,
-  260, 0.02,
-  270, 0.03,
-  280, 0.03,
-  290, 0.03,
-  300, 0.04,
-  310, 0.02,
-  320, 0.03,
-  330, 0.04,
-  340, 0.04
-]
-
-armKValuesDown = [
-  255, 0.0,
-  300, -0.0002,
-  330, -0.03,
-  350, -0.0002
-]
-
-armPValuesDown = [
-  260, 0.03,
-  270, 0.04,
-  280, 0.03,
-  290, 0.02,
-  300, 0.0275,
-  310, 0.0275,
-  320, 0.0275,
-  330, 0.0275,
-  340, 0.03,
-  350, 0.025
+armPValues = [
+  255, 0.04,
+  300, 0.065,
+  330, 0.0525,
+  350, 0.02
 ]
 # distances are measured from swerve bot and should be remeasured if it misses - 4 inch from bumper to camera
 shotArmAngle = [
   # from behind first white line
   79, 320,
   # from podium
-  114, 315
+  114, 315,
   # from middle of white and blue line
   91, 
   # from behind blue line
@@ -86,5 +60,5 @@ ArmRotate {
   Ki = 0
   Kd = 0
   minOutputToMove = 0
-  tolerance = 1
+  tolerance = 1.5
 }
