fixed camera name

--- a/src/main/deploy/robotConfigs/Billthoven/sensors.conf
+++ b/src/main/deploy/robotConfigs/Billthoven/sensors.conf
@@ -18,5 +18,5 @@ navx {
   port=MXP
 }
 photonvision {
-    cameraname = Arducam_OV2311_USB_Camera_Billthoven
+    cameraname = Arducam_OV2311_USB_Camera (Billthoven)
 }
