Made photon vision get distance for swerve bot.

--- a/src/main/deploy/robotConfigs/Billthoven/sensors.conf
+++ b/src/main/deploy/robotConfigs/Billthoven/sensors.conf
@@ -19,4 +19,7 @@ navx {
 }
 photonvision {
     cameraName = Arducam_OV2311_USB_Camera_Billthoven
+    cameraHeightInInches = 8.5
+    targetHeightInInches = 52.0675
+    cameraPitchInDegrees = 27.9
 }
