--- a/src/main/deploy/robotConfigs/SwerveBot/sensors.conf
+++ b/src/main/deploy/robotConfigs/SwerveBot/sensors.conf
@@ -7,5 +7,9 @@ navx {
 }
 
 photonvision {
-  
+  cameraName = Arducam_OV2311_USB_Camera
+  cameraHeightInInches = 8.5
+  targetHeightInInches = 52.0675
+  cameraPitchInDegrees = 27.9
+
 }
