tuned arm angles, awaiting accurate distance

--- a/src/main/deploy/robotConfigs/Billthoven/billarmrotate.conf
+++ b/src/main/deploy/robotConfigs/Billthoven/billarmrotate.conf
@@ -27,7 +27,7 @@ maxAngle = 351
 
 minAngle = 255
 
-armKValues = [
+armKValuesUp = [
   255, 0.0,
   278, 0.0,
   291, -0.0002,
@@ -36,35 +36,61 @@ armKValues = [
   350, -0.0002
 ]
 
-armPValues = [
-  255, 0.04,
-  300, 0.065,
-  330, 0.0525,
-  350, 0.02
+armPValuesUp = [
+  255, 0.02,
+  260, 0.02,
+  270, 0.03,
+  280, 0.03,
+  290, 0.03,
+  300, 0.04,
+  310, 0.02,
+  320, 0.03,
+  330, 0.04,
+  340, 0.04
+]
+
+armKValuesDown = [
+  255, 0.0,
   278, 0.0,
   291, -0.0002,
   304, 0.0,
   345, 0.0,
+  350, -0.0002
+]
+
+armPValuesDown = [
+  260, 0.03,
+  270, 0.04,
+  280, 0.03,
+  290, 0.02,
+  300, 0.0275,
+  310, 0.0275,
+  320, 0.0275,
+  330, 0.0275,
+  340, 0.03,
+  350, 0.025
 ]
 # distances are measured from swerve bot and should be remeasured if it misses - 4 inch from bumper to camera
 shotArmAngle = [
-  # from behind first white line
-  79, 320,
-  # from podium
-  114, 315,
+  # close shot
+  36, 332
+  # first white line
+  74, 318.5,
   # from middle of white and blue line
-  91, 
-  # from behind blue line
-  131,
+  91, 314,
+  # against the podium
+  103.75, 311.5,
   # from white line corner
-  107,
-  # from in front of white line just behind stage
-  206,
+  107, 311,
+  # from podium
+  114, 310.5,
+  # from behind blue line
+  131, 308.75,
 ]
 ArmRotate {
   Kp = 0
   Ki = 0
   Kd = 0
   minOutputToMove = 0
-  tolerance = 1.5
+  tolerance = 0.75
 }
