--- a/src/main/deploy/robotConfigs/Billthoven/billshooter.conf
+++ b/src/main/deploy/robotConfigs/Billthoven/billshooter.conf
@@ -34,17 +34,19 @@ shooterMotor{
     ]
     # distances are measured from swerve bot and should be remeasured if it misses - 4 inch from bumper to camera
     shotShootingRPM=[
-        # from behind first white line
-        79, 3650,
-        # from podium
-        114, 3650,
+        # close shot
+        36, 3250
+        # first white line
+        74, 4000,
         # from middle of white and blue line
-        91, 
-        # from behind blue line
-        131,
+        91, 4000,
         # from white line corner
-        107,
+        107, 4000,
+        # from podium
+        114, 4000,
+        # from behind blue line
+        131, 4000,
         # from in front of white line just behind stage
-        206,
+        206, 4000
     ]
 }
