--- a/src/main/deploy/robotConfigs/SwerveBot/sensors.conf
+++ b/src/main/deploy/robotConfigs/SwerveBot/sensors.conf
@@ -11,5 +11,5 @@ photonvision {
   cameraHeightInInches = 8.5
   targetHeightInInches = 52.0675
   cameraPitchInDegrees = 27.9
-
+  offsetToSwerveModInches = 1.625
 }
