--- a/src/main/deploy/robotConfigs/Billthoven/billarmrotate.conf
+++ b/src/main/deploy/robotConfigs/Billthoven/billarmrotate.conf
@@ -23,7 +23,7 @@ motor1 {
 
 motorController = sparkMax
 
-maxAngle = 351
+maxAngle = 352
 
 minAngle = 255
 
@@ -72,20 +72,20 @@ armPValuesDown = [
 ]
 # distances are measured from swerve bot and should be remeasured if it misses - 4 inch from bumper to camera
 shotArmAngle = [
-  # close shot
-  36, 332
-  # first white line
-  74, 318.5,
-  # from middle of white and blue line
-  91, 314,
-  # against the podium
-  103.75, 311.5,
-  # from white line corner
-  107, 311,
-  # from podium
-  114, 310.5,
-  # from behind blue line
-  131, 308.75,
+  # close shot - actual distance 36
+  36, 332,
+  # first white line - actual distance 74
+  69.7, 318.5,
+  # from middle of white and blue line - actual distance 91
+  86, 314,
+  # against the podium - actual distance 103.75
+  95.5, 311.5,
+  # from white line corner - actual distance 107
+  101.3, 311,
+  # from podium - actual distance 114
+  106.9, 310.5,
+  # from behind blue line - actual distance 131
+  122.5, 308.75
 ]
 ArmRotate {
   Kp = 0
