--- a/src/main/deploy/robotConfigs/Billthoven/billshooter.conf
+++ b/src/main/deploy/robotConfigs/Billthoven/billshooter.conf
@@ -34,19 +34,19 @@ shooterMotor{
     ]
     # distances are measured from swerve bot and should be remeasured if it misses - 4 inch from bumper to camera
     shotShootingRPM=[
-        # close shot
-        36, 3250
-        # first white line
-        74, 4000,
-        # from middle of white and blue line
-        91, 4000,
-        # from white line corner
-        107, 4000,
-        # from podium
-        114, 4000,
-        # from behind blue line
-        131, 4000,
-        # from in front of white line just behind stage
-        206, 4000
+        # close shot - measured distance 36
+        36, 3250,
+        # first white line - measured distance 74
+        69.7, 4000,
+        # from middle of white and blue line - measured distance 91
+        86, 4000,
+        # against podium - measured distance 103.75
+        95.5, 4000,
+        # from white line corner - measured distance 107
+        101.3, 4000,
+        # from podium - measured distance 114
+        106.9, 4000,
+        # from behind blue line - measured distance 131
+        122.5, 4000
     ]
 }
