--- a/src/main/deploy/robotConfigs/SwerveBot/sensors.conf
+++ b/src/main/deploy/robotConfigs/SwerveBot/sensors.conf
@@ -12,4 +12,5 @@ photonvision {
   targetHeightInInches = 52.0675
   cameraPitchInDegrees = 27.9
   offsetToSwerveModInches = 1.625
+  cameraOffsetToCenterInInches = 12.5
 }
