Cleaned up armRotateMotionProfiling.ArmRotateMotionProfiling.
Cleaned up arm subsystem.
Added K factors to arm config.

--- a/src/main/deploy/robotConfigs/Billthoven/billarmrotate.conf
+++ b/src/main/deploy/robotConfigs/Billthoven/billarmrotate.conf
@@ -45,6 +45,11 @@ ArmRotate {
   Kp = 0
   Ki = 0
   Kd = 0
+  Ks = 0
+  Kg = 0
+  Kv = 0
+  KmaxVelocity = 0
+  KmaxAcceleration = 0
   minOutputToMove = 0
   tolerance = 1
 }
