--- a/src/main/deploy/robotConfigs/Billthoven/BlueAutonomous.conf
+++ b/src/main/deploy/robotConfigs/Billthoven/BlueAutonomous.conf
@@ -6,8 +6,8 @@ AmpScore {
   # Waypoints and Angles to score R1 Note in Amp
   WayPoint3 = -28.5 # 47 - 33/2
   Angle2 = 0
-  WayPoint4 = 49 # (114-7) - (72 1/2 + 33/2) + (x)
-  WayPoint5 = -42 # -((114-7) - (72 1/2 +33/2) + (x))
+  WayPoint4 = 35 # (114-7) - (72 1/2 + 33/2) + (x)
+  WayPoint5 = -28 # -((114-7) - (72 1/2 +33/2) + (x))
   Angle3 = 270
   WayPoint6 = 30.5 # -(47-33/2)
   # Waypoints and Angles to pick up C1 Note
@@ -46,13 +46,13 @@ DriveStation3SpeakerWithAmp{
   #Waypoints And Angle to pick up Note R1
   WayPoint1 = 14.5
   Angle1 = 0
-  WayPoint2 = 74 # (81 - 7)
-  WayPoint3 = -35 # -((114 - 7) - (72 1/2 - 33/2) + (X)) X is not desided on 
+  WayPoint2 = 66 # (81 - 7)
+  WayPoint3 = -27 # -((114 - 7) - (72 1/2 - 33/2) + (X)) X is not desided on 
   Angle2 = 270
   WayPoint4 = 31.5 # -(41 - 33/2)
   WayPoint5 = -13 # (28 1/2 - 33/2)
   Angle3 = 0
-  WayPoint6 = 200 # (324 1/2 - 7) - ((72 1/2 + 33/2) + (X) X in not desided on
+  WayPoint6 = 200 # (324 1/2 - 7) - (72 1/2 + 33/2) + (X) X in not desided on
   GyroOffset = 60
 }
 
