--- a/src/main/deploy/robotConfigs/Billthoven/sensors.conf
+++ b/src/main/deploy/robotConfigs/Billthoven/sensors.conf
@@ -20,7 +20,8 @@ navx {
 photonvision {
     cameraName = Arducam_OV2311_USB_Camera_Billthoven
     cameraHeightInInches = 8.5
-    targetHeightInInches = 52.0675
-    cameraPitchInDegrees = 27.9
+    targetHeightInInches = 57.125
+    cameraPitchInDegrees = 28.2
     offsetToSwerveModInches = 1.625
+    cameraOffsetToCenterInInches = 12.0625
 }
