Started tuning distance shots

--- a/src/main/deploy/robotConfigs/Billthoven/billarmrotate.conf
+++ b/src/main/deploy/robotConfigs/Billthoven/billarmrotate.conf
@@ -75,17 +75,19 @@ shotArmAngle = [
   # close shot - actual distance 36
   36, 332,
   # first white line - actual distance 74
-  69.7, 318.5,
+  74, 318.5,
   # from middle of white and blue line - actual distance 91
-  86, 314,
+  91, 314,
   # against the podium - actual distance 103.75
-  95.5, 311.5,
+  103.75, 311.5,
   # from white line corner - actual distance 107
-  101.3, 311,
+  107, 311,
   # from podium - actual distance 114
-  106.9, 310.5,
+  114, 310.5,
   # from behind blue line - actual distance 131
-  122.5, 308.75
+  131, 308.75
+  # from on white wing line
+  213, 305
 ]
 ArmRotate {
   Kp = 0
