--- a/src/main/deploy/robotConfigs/Billthoven/billshooter.conf
+++ b/src/main/deploy/robotConfigs/Billthoven/billshooter.conf
@@ -48,5 +48,7 @@ shooterMotor{
         114, 4000,
         # from behind blue line - measured distance 131
         131, 4000
+        # from white wing line
+        213, 4000
     ]
 }
