--- a/src/main/deploy/robotConfigs/Billthoven/BlueAutonomous.conf
+++ b/src/main/deploy/robotConfigs/Billthoven/BlueAutonomous.conf
@@ -23,6 +23,7 @@ CentralSpeaker3Scores{
   #WayPoints and Angles to get to R3 Note 
   WayPoint2 = 72
   Angle1 = 66.2
+  Angle2 = 25
 }
 
 DriveStation2Speaker{
