--- a/src/main/deploy/robotConfigs/Billthoven/RedAutonomous.conf
+++ b/src/main/deploy/robotConfigs/Billthoven/RedAutonomous.conf
@@ -23,6 +23,7 @@ CentralSpeaker3Scores{
   #WayPoints and Angles to get to R3 Note 
   WayPoint2 = 72
   Angle1 = 293.8
+  Angle2 = 335
 }
 
 DriveStation2Speaker{
