Added a movement in center3 so the robot doesn't crash into the podium

--- a/src/main/deploy/robotConfigs/Billthoven/RedAutonomous.conf
+++ b/src/main/deploy/robotConfigs/Billthoven/RedAutonomous.conf
@@ -20,8 +20,10 @@ AmpScore {
 CentralSpeaker3Scores{
   # WayPoint to R2 Note and to score the Note
   WayPoint1 = 49.25 #77 3/4 - 33/2
-  #WayPoints and Angles to get to R3 Note 
+  # WayPoints and Angles to get to R3 Note 
   WayPoint2 = 72
+  # WayPoint to make sure that the turn doesn't crash into the podium
+  WayPoint3 = -12
   Angle1 = 293.8
   Angle2 = 335
 }
