--- a/src/main/deploy/robotConfigs/Billthoven/BlueAutonomous.conf
+++ b/src/main/deploy/robotConfigs/Billthoven/BlueAutonomous.conf
@@ -17,6 +17,7 @@ AmpScore {
 
 }
 
+# Source Side
 CentralSpeaker3Scores{
   # WayPoint to R2 Note and to score the Note
   WayPoint1 = 49.25 #77 3/4 - 33/2
@@ -26,6 +27,16 @@ CentralSpeaker3Scores{
   Angle2 = 25
 }
 
+CentralSpeaker3ScoresAmpSide{
+  # WayPoint to R2 Note and to score the Note
+  WayPoint1 = 49.25 #77 3/4 - 33/2
+  #WayPoints and Angles to get to R3 Note 
+  WayPoint2 = 72
+  Angle1 = 293.8
+  Angle2 = 335
+}
+
+# Source Side
 DriveStation2Speaker{
   #Waypoints and Angles to score R3 Note in Speaker
   WayPoint1 = 14.5
@@ -35,6 +46,15 @@ DriveStation2Speaker{
   # Drive Towards centerline
   WayPoint3 = 20 # (x) We will figure out this number later
   GyroOffset = -60
+  
+}
+
+DriveStation2SpeakerAmpSide{
+  #Waypoints and Angles to score R3 Note in Speaker
+  WayPoint1 = 14.5
+  Angle1 = 0
+  WayPoint2 = 58 # (81-7)
+  GyroOffset = 60
   
 }
 
