--- a/src/main/deploy/robotConfigs/ShowBot/drivetrain.conf
+++ b/src/main/deploy/robotConfigs/ShowBot/drivetrain.conf
@@ -7,6 +7,7 @@ ports {
 frontleft {
     inverted=false
     hasEncoder=true
+    hasAbsoluteEncoder = false
     encoderInverted=false
     currentLimit=60
     brakeMode=true
@@ -17,6 +18,7 @@ frontleft {
 backleft {
     inverted=false
     hasEncoder=true
+    hasAbsoluteEncoder = false
     encoderInverted=false
     currentLimit=60
     brakeMode=true
@@ -27,6 +29,7 @@ backleft {
 frontright {
     inverted=false
     hasEncoder=true
+    hasAbsoluteEncoder = false
     encoderInverted=true
     currentLimit=60
     brakeMode=true
@@ -37,6 +40,7 @@ frontright {
 backright {
     inverted=false
     hasEncoder=true
+    hasAbsoluteEncoder = false
     encoderInverted=true
     currentLimit=60
     brakeMode=true
