motors complening about absolute encoder

--- a/src/main/deploy/robotConfigs/TopGun/drivetrain.conf
+++ b/src/main/deploy/robotConfigs/TopGun/drivetrain.conf
@@ -13,6 +13,7 @@ frontleft {
     encoderTicksPerRotation=42
     hasForwardLimitSwitch=false
     hasReverseLimitSwitch=false
+    hasAbsoluteEncoder=false
 }
 backleft {
     inverted=true
@@ -23,6 +24,7 @@ backleft {
     encoderTicksPerRotation=42
     hasForwardLimitSwitch=false
     hasReverseLimitSwitch=false
+    hasAbsoluteEncoder=false
 }
 frontright {
     inverted=false
@@ -33,6 +35,7 @@ frontright {
     encoderTicksPerRotation=42
     hasForwardLimitSwitch=false
     hasReverseLimitSwitch=false
+    hasAbsoluteEncoder=false
 }
 backright {
     inverted=false
@@ -43,6 +46,7 @@ backright {
     encoderTicksPerRotation=42
     hasForwardLimitSwitch=false
     hasReverseLimitSwitch=false
+    hasAbsoluteEncoder=false
 }
 gyrocorrect {
     kproportion=0.025
