--- a/src/main/deploy/robotConfigs/TopGun/shooter.conf
+++ b/src/main/deploy/robotConfigs/TopGun/shooter.conf
@@ -5,6 +5,7 @@ ports{
 }
 
 topShooterWheel{
+    hasAbsoluteEncoder = false
     inverted=false    
     hasEncoder=true
     encoderInverted=false
@@ -35,6 +36,7 @@ topShooterWheel{
 }
 
 bottomShooterWheel{
+    hasAbsoluteEncoder=false
     inverted=true   
     hasEncoder=true
     encoderInverted=false
@@ -65,6 +67,7 @@ bottomShooterWheel{
 }
 
 angleMotor{
+    hasAbsoluteEncoder=false
     inverted=false 
     hasEncoder=true
     encoderInverted=false
