--- a/src/main/deploy/robotConfigs/SwerveBot/swervedrivetrain.conf
+++ b/src/main/deploy/robotConfigs/SwerveBot/swervedrivetrain.conf
@@ -43,25 +43,26 @@ SwerveDriveConstants {
   driveInvert = false 
   angleInvert = true 
   absoluteAngleEncoderInvert = true 
+  ports {
+    Mod0 {
+      driveMotorID = 8
+      angleMotorID = 7 
+    }
 
-  Mod0 {
-    driveMotorID = 8
-    angleMotorID = 7 
-  }
+    Mod1{
+      driveMotorID = 4
+      angleMotorID = 3 
+    }
 
-  Mod1{
-    driveMotorID = 4  
-    angleMotorID = 3 
-  }
+    Mod2{
+      driveMotorID = 5
+      angleMotorID = 6
+    }
 
-  Mod2{
-    driveMotorID = 5
-    angleMotorID = 6
-  }
-
-  Mod3{
-    driveMotorID = 1 
-    angleMotorID = 2
+    Mod3{
+      driveMotorID = 1 
+      angleMotorID = 2
+    }
   }
 }
 parkingbrake{}
@@ -77,4 +78,111 @@ teleop {
     fastmoderotatescale = 1
     kdelay=25
     kproportion=0.025
+}
+Mod0 {
+  driveMotorID = {
+    # These values are almost certainly not correct
+    inverted = false
+    hasAbsoluteEncoder = true
+    absoluteEncoderInverted = true
+    absoluteEncoderZeroOffset = 0
+    currentLimit = 60
+    brakeMode = true
+    encoderTicksPerRotation = 42
+    hasForwardLimitSwitch = false
+    hasReverseLimitSwitch = false
+  }
+  angleMotorID = {
+    # These values are almost certainly not correct
+    inverted = false
+    hasAbsoluteEncoder = true
+    absoluteEncoderInverted = true
+    absoluteEncoderZeroOffset = 0
+    currentLimit = 60
+    brakeMode = true
+    encoderTicksPerRotation = 42
+    hasForwardLimitSwitch = false
+    hasReverseLimitSwitch = false
+  }
+}
+
+Mod1{
+  driveMotorID = {
+    # These values are almost certainly not correct
+    inverted = false
+    hasAbsoluteEncoder = true
+    absoluteEncoderInverted = true
+    absoluteEncoderZeroOffset = 0
+    currentLimit = 60
+    brakeMode = true
+    encoderTicksPerRotation = 42
+    hasForwardLimitSwitch = false
+    hasReverseLimitSwitch = false
+  }
+  angleMotorID = {
+    # These values are almost certainly not correct
+    inverted = false
+    hasAbsoluteEncoder = true
+    absoluteEncoderInverted = true
+    absoluteEncoderZeroOffset = 0
+    currentLimit = 60
+    brakeMode = true
+    encoderTicksPerRotation = 42
+    hasForwardLimitSwitch = false
+    hasReverseLimitSwitch = false
+  }
+}
+
+Mod2{
+  driveMotorID = {
+    # These values are almost certainly not correct
+    inverted = false
+    hasAbsoluteEncoder = true
+    absoluteEncoderInverted = true
+    absoluteEncoderZeroOffset = 0
+    currentLimit = 60
+    brakeMode = true
+    encoderTicksPerRotation = 42
+    hasForwardLimitSwitch = false
+    hasReverseLimitSwitch = false
+  }
+  angleMotorID = {
+    # These values are almost certainly not correct
+    inverted = false
+    hasAbsoluteEncoder = true
+    absoluteEncoderInverted = true
+    absoluteEncoderZeroOffset = 0
+    currentLimit = 60
+    brakeMode = true
+    encoderTicksPerRotation = 42
+    hasForwardLimitSwitch = false
+    hasReverseLimitSwitch = false
+  }
+}
+
+Mod3{
+  driveMotorID = {
+    # These values are almost certainly not correct
+    inverted = false
+    hasAbsoluteEncoder = true
+    absoluteEncoderInverted = true
+    absoluteEncoderZeroOffset = 0
+    currentLimit = 60
+    brakeMode = true
+    encoderTicksPerRotation = 42
+    hasForwardLimitSwitch = false
+    hasReverseLimitSwitch = false
+  }
+  angleMotorID = {
+    # These values are almost certainly not correct
+    inverted = false
+    hasAbsoluteEncoder = true
+    absoluteEncoderInverted = true
+    absoluteEncoderZeroOffset = 0
+    currentLimit = 60
+    brakeMode = true
+    encoderTicksPerRotation = 42
+    hasForwardLimitSwitch = false
+    hasReverseLimitSwitch = false
+  }
 }
