added potential for path movement

--- a/src/main/deploy/robotConfigs/SwerveBot/swervedrivetrain.conf
+++ b/src/main/deploy/robotConfigs/SwerveBot/swervedrivetrain.conf
@@ -42,7 +42,7 @@ SwerveDriveConstants {
 
   driveInvert = false 
   angleInvert = true 
-  absoluteAngleEncoderInvert = true 
+  absoluteAngleEncoderInvert = true
 
   Mod0 {
     driveMotorID = 8
@@ -77,4 +77,22 @@ teleop {
     fastmoderotatescale = 1
     kdelay=25
     kproportion=0.025
+}
+
+usePathPlanning = true
+
+pathplanning {
+    driveBaseRadiusInMeters = 0.44
+    totalErrorThreshold = 0.5
+    errorSpikeThreshold = 0.25
+    translationConstants {
+      p = 0.01
+      i = 0.0
+      d = 0.0
+    }
+    rotationConstants {
+      p = 0.01
+      i = 0.0
+      d = 0.0
+    }
 }
