--- a/src/main/.pathplanner/settings.json
+++ b/src/main/.pathplanner/settings.json
@@ -2,7 +2,10 @@
   "robotWidth": 0.8763,
   "robotLength": 0.8763,
   "holonomicMode": true,
-  "pathFolders": [],
+  "pathFolders": [
+    "New Folder",
+    "New New Folder"
+  ],
   "autoFolders": [],
   "defaultMaxVel": 2.0,
   "defaultMaxAccel": 2.0,
