fixed graces code. made swerve bot work by fixing the kraken config

--- a/src/main/deploy/robotConfigs/Billthoven/swervedrivetrain.conf
+++ b/src/main/deploy/robotConfigs/Billthoven/swervedrivetrain.conf
@@ -43,6 +43,7 @@ SwerveDriveConstants {
   driveInvert = false 
   angleInvert = true 
   absoluteAngleEncoderInvert = true 
+  useKraken = true
 
 ports {
     Mod0 {
