--- a/src/main/deploy/robotConfigs/SwerveBot/swervedrivetrain.conf
+++ b/src/main/deploy/robotConfigs/SwerveBot/swervedrivetrain.conf
@@ -43,6 +43,7 @@ SwerveDriveConstants {
   driveInvert = false 
   angleInvert = true 
   absoluteAngleEncoderInvert = true 
+  useKraken = false
   ports {
     Mod0 {
       driveMotorID = 8
