--- a/src/main/deploy/robotConfigs/SwerveBot/sensors.conf
+++ b/src/main/deploy/robotConfigs/SwerveBot/sensors.conf
@@ -6,10 +6,16 @@ pigeon {
     id=26
 }
 
-#photonvision {
-  cameraName = Arducam_OV2311_USB_Camera
-  cameraHeightInInches = 8.5
+photonvision {
   targetHeightInInches = 52.0675
-  cameraPitchInDegrees = 27.9
-  offsetToSwerveModInches = 1.625
-  cameraOffsetToCenterInInches = 12.5
+  cameraName1 = Arducam_OV2311_USB_Camera_1
+  cameraName2 = Arducam_OV2311_USB_Camera_2
+  cameraName3 = Arducam_OV2311_USB_Camera_3
+  Arducam_OV2311_USB_Camera_1 {
+    cameraHeightInInches = 8.5
+    cameraPitchInDegrees = 27.9
+    offsetToSwerveModInches = 1.625
+    cameraOffsetToCenterInInches = 12.5
+  }
+  
+}
