--- a/src/main/deploy/robotConfigs/SwerveBot/sensors.conf
+++ b/src/main/deploy/robotConfigs/SwerveBot/sensors.conf
@@ -7,6 +7,7 @@ pigeon {
 }
 
 photonvision {
+  numberOfCameras = 1
   targetHeightInInches = 52.0675
   cameraName1 = Arducam_OV2311_USB_Camera_1
   cameraName2 = Arducam_OV2311_USB_Camera_2
