Made swervebot use krakens

--- a/src/main/deploy/robotConfigs/SwerveBot/swervedrivetrain.conf
+++ b/src/main/deploy/robotConfigs/SwerveBot/swervedrivetrain.conf
@@ -43,7 +43,7 @@ SwerveDriveConstants {
   driveInvert = false 
   angleInvert = true 
   absoluteAngleEncoderInvert = true 
-  useKraken = false
+  useKraken = true
   ports {
     Mod0 {
       driveMotorID = 8
