More refactoring of camera code

--- a/src/main/deploy/robotConfigs/SwerveBot/sensors.conf
+++ b/src/main/deploy/robotConfigs/SwerveBot/sensors.conf
@@ -9,6 +9,7 @@ pigeon {
 photonvision {
   numberOfCameras = 1
   targetHeightInInches = 52.0675
+  targetCameraName = Arducam_OV2311_USB_Camera_1
   cameraName1 = Arducam_OV2311_USB_Camera_1
   cameraName2 = Arducam_OV2311_USB_Camera_2
   cameraName3 = Arducam_OV2311_USB_Camera_3
