--- a/src/main/deploy/robotConfigs/SwerveBot/sensors.conf
+++ b/src/main/deploy/robotConfigs/SwerveBot/sensors.conf
@@ -20,4 +20,9 @@ photonvision {
     cameraOffsetToCenterInInches = 12.5
   }
   
+Fieldmap{
+  numberOfAprilTags = 2
+  targetHeightInInches_1 = 52.0675
+  targetHeightInInches_2 = 52.0675
+}
 }
