--- a/src/main/deploy/robotConfigs/SwerveBot/sensors.conf
+++ b/src/main/deploy/robotConfigs/SwerveBot/sensors.conf
@@ -14,10 +14,13 @@ photonvision {
   cameraName2 = Arducam_OV2311_USB_Camera_2
   cameraName3 = Arducam_OV2311_USB_Camera_3
   Arducam_OV2311_USB_Camera_1 {
-    cameraHeightInInches = 8.5
-    cameraPitchInDegrees = 27.9
-    offsetToSwerveModInches = 1.625
     cameraOffsetToCenterInInches = 12.5
+    cameraOffsetToCenterInInchesY = 12.5
+    cameraHeightInInches = 8.5
+    cameraRollInDegrees = 0
+    cameraPitchInDegrees = 27.9
+    cameraYawInDegrees = 0
+    offsetToSwerveModInches = 1.625
   }
   
 Fieldmap{
