--- a/.gitignore
+++ b/.gitignore
@@ -53,7 +53,6 @@
 *.war
 *.nar
 *.ear
-*.tar.gz
 *.rar
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
@@ -156,7 +155,7 @@ gradle-app.setting
 .project
 .settings/
 bin/
-imgui.ini
+
 # IntelliJ
 *.iml
 *.ipr
@@ -168,6 +167,8 @@ out/
 .fleet
 
 # Simulation GUI and other tools window save file
+networktables.json
+simgui.json
 *-window.json
 
 # Simulation data log directory
@@ -178,3 +179,10 @@ logs/
 
 # Folder that has CTRE Phoenix Sim device config storage
 ctre_sim/
+
+# clangd
+/.cache
+compile_commands.json
+
+# Eclipse generated file for annotation processors
+.factorypath
