arm test bed rotates safely

--- a/src/main/deploy/robotConfigs/RoadKill/armtestbed.conf
+++ b/src/main/deploy/robotConfigs/RoadKill/armtestbed.conf
@@ -3,7 +3,7 @@ ports {
 }
 
 motor {
-  inverted = false
+  inverted = true
   hasAbsoluteEncoder = true
   absoluteEncoderInverted = false
   absoluteEncoderZeroOffset = 0
