creating identification routine to get kS

--- a/src/main/deploy/robotConfigs/RoadKill/armtestbed.conf
+++ b/src/main/deploy/robotConfigs/RoadKill/armtestbed.conf
@@ -15,7 +15,11 @@ motor {
 }
 
 motorController = sparkMax
+maxAngle = 315
+minAngle = 45
 
-maxAngle = 290
+# recalc (https://www.reca.lc/arm) values 
+ratio = 375 
+comDistance = 32
+armMass = 5 
 
-minAngle = 70 
