--- a/src/main/deploy/pathplanner/settings.json
+++ b/src/main/deploy/pathplanner/settings.json
@@ -19,13 +19,13 @@
   "driveCurrentLimit": 60.0,
   "wheelCOF": 0.19417475728,
   "flModuleX": 0.3014471,
-  "flModuleY": 0.301,
-  "frModuleX": 0.301,
-  "frModuleY": -0.301,
-  "blModuleX": -0.301,
-  "blModuleY": 0.301,
-  "brModuleX": -0.301,
-  "brModuleY": -0.301,
+  "flModuleY": 0.3014471,
+  "frModuleX": 0.3014471,
+  "frModuleY": -0.3014471,
+  "blModuleX": -0.3014471,
+  "blModuleY": 0.3014471,
+  "brModuleX": -0.3014471,
+  "brModuleY": -0.3014471,
   "bumperOffsetX": 0.0,
   "bumperOffsetY": 0.0,
   "robotFeatures": []
