--- a/src/main/deploy/robotConfigs/SwerveBot/sensors.conf
+++ b/src/main/deploy/robotConfigs/SwerveBot/sensors.conf
@@ -7,15 +7,33 @@ pigeon {
 }
 
 photonvision {
-  numberOfCameras = 1
+  numberOfCameras = 3
   targetHeightInInches = 52.0675
   targetCameraName = Arducam_OV2311_USB_Camera_1
   cameraName1 = Arducam_OV2311_USB_Camera_1
   cameraName2 = Arducam_OV2311_USB_Camera_2
   cameraName3 = Arducam_OV2311_USB_Camera_3
   Arducam_OV2311_USB_Camera_1 {
-    cameraOffsetToCenterInInches = 12.5
+    cameraOffsetToCenterInInches = -12.5
     cameraOffsetToCenterInInchesY = 12.5
+    cameraHeightInInches = 8.5
+    cameraRollInDegrees = 0
+    cameraPitchInDegrees = 27.9
+    cameraYawInDegrees = 0
+    offsetToSwerveModInches = 1.625
+  }
+  Arducam_OV2311_USB_Camera_2 {
+    cameraOffsetToCenterInInches = 12.5
+    cameraOffsetToCenterInInchesY = -12.5
+    cameraHeightInInches = 8.5
+    cameraRollInDegrees = 0
+    cameraPitchInDegrees = 27.9
+    cameraYawInDegrees = 0
+    offsetToSwerveModInches = 1.625
+  }
+  Arducam_OV2311_USB_Camera_3 {
+    cameraOffsetToCenterInInches = -12.5
+    cameraOffsetToCenterInInchesY = -12.5
     cameraHeightInInches = 8.5
     cameraRollInDegrees = 0
     cameraPitchInDegrees = 27.9
