--- a/src/main/deploy/pathplanner/settings.json
+++ b/src/main/deploy/pathplanner/settings.json
@@ -6,6 +6,7 @@
     "Auto #1 Paths 2025",
     "Auto #2 Paths 2025",
     "Auto #3 Paths 2025",
+    "Auto #5 Paths 2025",
     "Practice Paths"
   ],
   "autoFolders": [
