added ability to set odometry pose on SmartDashboard

--- a/src/main/deploy/robotConfigs/SwerveBot/sensors.conf
+++ b/src/main/deploy/robotConfigs/SwerveBot/sensors.conf
@@ -7,6 +7,7 @@ pigeon {
 }
 
 photonvision {
+  useVisionForPose = false
   numberOfCameras = 3
   targetHeightInInches = 52.0675
   targetCameraName = Arducam_OV2311_USB_Camera1
