added positions for each of the swerve bot modules

--- a/src/main/deploy/robotConfigs/SwerveBot/swervedrivetrain.conf
+++ b/src/main/deploy/robotConfigs/SwerveBot/swervedrivetrain.conf
@@ -46,21 +46,25 @@ SwerveDriveConstants {
   useKraken = true
   ports {
     Mod0 {
+      #front left 
       driveMotorID = 8
       angleMotorID = 7 
     }
 
     Mod1 {
+      #front right 
       driveMotorID = 4
       angleMotorID = 3 
     }
 
     Mod2 {
+    # back left 
       driveMotorID = 5
       angleMotorID = 6
     }
 
     Mod3 {
+      #back rigth 
       driveMotorID = 1 
       angleMotorID = 2
     }
