--- a/src/main/deploy/robotConfigs/SwerveBot/sensors.conf
+++ b/src/main/deploy/robotConfigs/SwerveBot/sensors.conf
@@ -8,37 +8,47 @@ pigeon {
 
 photonvision {
   useVisionForPose = false
-  numberOfCameras = 3
+  numberOfCameras = 4
   targetHeightInInches = 52.0675
-  targetCameraName = Arducam_OV2311_USB_Camera1
-  cameraName1 = Arducam_OV2311_USB_Camera1
-  cameraName2 = Arducam_OV2311_USB_Camera2
-  cameraName3 = Arducam_OV2311_USB_Camera3
-  Arducam_OV2311_USB_Camera1 {
+  targetCameraName = OV2311-2MP-60FPS-1
+  cameraName1 = OV2311-2MP-60FPS-1
+  cameraName2 = OV2311-2MP-60FPS-2
+  cameraName3 = OV2311-2MP-60FPS-3
+  cameraName4 = OV2311-2MP-60FPS-4
+  OV2311-2MP-60FPS-1 {
     cameraOffsetToCenterInInches = -12.5
     cameraOffsetToCenterInInchesY = 12.5
     cameraHeightInInches = 8.5
     cameraRollInDegrees = 0
-    cameraPitchInDegrees = 23.0
-    cameraYawInDegrees = 10
+    cameraPitchInDegrees = 25.0
+    cameraYawInDegrees = 335
     offsetToSwerveModInches = 1.625
   }
-  Arducam_OV2311_USB_Camera2 {
+  OV2311-2MP-60FPS-2 {
     cameraOffsetToCenterInInches = 12.5
-    cameraOffsetToCenterInInchesY = -12.5
+    cameraOffsetToCenterInInchesY = 12.5
     cameraHeightInInches = 8.5
     cameraRollInDegrees = 0
-    cameraPitchInDegrees = 23.0
-    cameraYawInDegrees = 170
+    cameraPitchInDegrees = 25.0
+    cameraYawInDegrees = 25
     offsetToSwerveModInches = 1.625
   }
-  Arducam_OV2311_USB_Camera3 {
+  OV2311-2MP-60FPS-3 {
     cameraOffsetToCenterInInches = -12.5
     cameraOffsetToCenterInInchesY = -12.5
     cameraHeightInInches = 8.5
     cameraRollInDegrees = 0
-    cameraPitchInDegrees = 23.0
-    cameraYawInDegrees = 190
+    cameraPitchInDegrees = 25.0
+    cameraYawInDegrees = 205
+    offsetToSwerveModInches = 1.625
+  }
+  OV2311-2MP-60FPS-4 {
+    cameraOffsetToCenterInInches = 12.5
+    cameraOffsetToCenterInInchesY = -12.5
+    cameraHeightInInches = 8.5
+    cameraRollInDegrees = 0
+    cameraPitchInDegrees = 25.0
+    cameraYawInDegrees = 155
     offsetToSwerveModInches = 1.625
   }
   
