--- a/src/main/deploy/pathplanner/settings.json
+++ b/src/main/deploy/pathplanner/settings.json
@@ -7,6 +7,7 @@
     "Auto #2 Paths 2025",
     "Auto #3 Paths 2025",
     "Auto #5 Paths 2025",
+    "Auto #6 Paths 2025",
     "Practice Paths"
   ],
   "autoFolders": [
