the cameras work very well now
the camera offset is VERY VERY important!!!!

--- a/src/main/deploy/robotConfigs/SwerveBot/sensors.conf
+++ b/src/main/deploy/robotConfigs/SwerveBot/sensors.conf
@@ -7,7 +7,7 @@ pigeon {
 }
 
 photonvision {
-  useVisionForPose = false
+  useVisionForPose = true
   numberOfCameras = 4
   targetHeightInInches = 52.0675
   targetCameraName = OV2311-2MP-60FPS-1
@@ -16,39 +16,39 @@ photonvision {
   cameraName3 = OV2311-2MP-60FPS-3
   cameraName4 = OV2311-2MP-60FPS-4
   OV2311-2MP-60FPS-1 {
-    cameraOffsetToCenterInInches = -12.5
-    cameraOffsetToCenterInInchesY = 12.5
+    cameraOffsetToCenterInInches = 13.5
+    cameraOffsetToCenterInInchesY = 12.375
     cameraHeightInInches = 8.5
     cameraRollInDegrees = 0
-    cameraPitchInDegrees = 25.0
-    cameraYawInDegrees = 335
+    cameraPitchInDegrees = 0
+    cameraYawInDegrees = 0
     offsetToSwerveModInches = 1.625
   }
   OV2311-2MP-60FPS-2 {
-    cameraOffsetToCenterInInches = 12.5
-    cameraOffsetToCenterInInchesY = 12.5
+    cameraOffsetToCenterInInches = 13.5
+    cameraOffsetToCenterInInchesY = -12.375
     cameraHeightInInches = 8.5
     cameraRollInDegrees = 0
-    cameraPitchInDegrees = 25.0
-    cameraYawInDegrees = 25
+    cameraPitchInDegrees = 0
+    cameraYawInDegrees = 0
     offsetToSwerveModInches = 1.625
   }
   OV2311-2MP-60FPS-3 {
-    cameraOffsetToCenterInInches = -12.5
-    cameraOffsetToCenterInInchesY = -12.5
+    cameraOffsetToCenterInInches = -13.5
+    cameraOffsetToCenterInInchesY = 12.375
     cameraHeightInInches = 8.5
     cameraRollInDegrees = 0
-    cameraPitchInDegrees = 25.0
-    cameraYawInDegrees = 205
+    cameraPitchInDegrees = 0
+    cameraYawInDegrees = 180
     offsetToSwerveModInches = 1.625
   }
   OV2311-2MP-60FPS-4 {
-    cameraOffsetToCenterInInches = 12.5
-    cameraOffsetToCenterInInchesY = -12.5
+    cameraOffsetToCenterInInches = -13.5
+    cameraOffsetToCenterInInchesY = -12.375
     cameraHeightInInches = 8.5
     cameraRollInDegrees = 0
-    cameraPitchInDegrees = 25.0
-    cameraYawInDegrees = 155
+    cameraPitchInDegrees = 0
+    cameraYawInDegrees = 180
     offsetToSwerveModInches = 1.625
   }
   
