--- a/src/main/deploy/pathplanner/settings.json
+++ b/src/main/deploy/pathplanner/settings.json
@@ -8,6 +8,7 @@
     "Auto #3 Paths 2025",
     "Auto #5 Paths 2025",
     "Auto #6 Paths 2025",
+    "TeleOp Paths",
     "Practice Paths"
   ],
   "autoFolders": [
