set cameras to correct numbers. also made the alliance matter to the odometry

--- a/src/main/deploy/robotConfigs/SwerveBot/sensors.conf
+++ b/src/main/deploy/robotConfigs/SwerveBot/sensors.conf
@@ -16,21 +16,21 @@ photonvision {
   cameraName3 = OV2311-2MP-60FPS-3
   cameraName4 = OV2311-2MP-60FPS-4
   OV2311-2MP-60FPS-1 {
-    cameraOffsetToCenterInInches = 13.5
-    cameraOffsetToCenterInInchesY = 12.375
-    cameraHeightInInches = 8.5
+    cameraOffsetToCenterInInches = 11.69
+    cameraOffsetToCenterInInchesY = 12.886
+    cameraHeightInInches = 8.993
     cameraRollInDegrees = 0
-    cameraPitchInDegrees = 0
-    cameraYawInDegrees = 0
+    cameraPitchInDegrees = 20
+    cameraYawInDegrees = -25 #335
     offsetToSwerveModInches = 1.625
   }
   OV2311-2MP-60FPS-2 {
-    cameraOffsetToCenterInInches = 13.5
-    cameraOffsetToCenterInInchesY = -12.375
-    cameraHeightInInches = 8.5
+    cameraOffsetToCenterInInches = 11.69
+    cameraOffsetToCenterInInchesY = -12.886
+    cameraHeightInInches = 8.993
     cameraRollInDegrees = 0
-    cameraPitchInDegrees = 0
-    cameraYawInDegrees = 0
+    cameraPitchInDegrees = 20
+    cameraYawInDegrees = 25
     offsetToSwerveModInches = 1.625
   }
   OV2311-2MP-60FPS-3 {
@@ -43,12 +43,12 @@ photonvision {
     offsetToSwerveModInches = 1.625
   }
   OV2311-2MP-60FPS-4 {
-    cameraOffsetToCenterInInches = -13.5
-    cameraOffsetToCenterInInchesY = -12.375
-    cameraHeightInInches = 8.5
+    cameraOffsetToCenterInInches = -11.69
+    cameraOffsetToCenterInInchesY = -12.886
+    cameraHeightInInches = 8.993
     cameraRollInDegrees = 0
-    cameraPitchInDegrees = 0
-    cameraYawInDegrees = 180
+    cameraPitchInDegrees = 20
+    cameraYawInDegrees = 155
     offsetToSwerveModInches = 1.625
   }
   
