--- a/src/main/deploy/robotConfigs/SBSD/coralendeffector.conf
+++ b/src/main/deploy/robotConfigs/SBSD/coralendeffector.conf
@@ -1,9 +1,9 @@
 ports{
-  armAngleLeft = 13
-  armAngleRight = 14
+  coralDelivery = 10
+  coralAngle = 11
 }
 
-armAngleLeft{
+coralDelivery{
   hasAbsoluteEncoder=false
   inverted=false
   hasEncoder= true 
@@ -14,30 +14,13 @@ armAngleLeft{
   hasReverseLimitSwitch=false
 }
 
-armAngleRight{
+coralAngle{
   hasAbsoluteEncoder=true
   inverted=false
-  hasEncoder=true
+  hasEncoder= true 
   encoderInverted=false
   currentLimit=60
   brakeMode=true
   hasForwardLimitSwitch=false
   hasReverseLimitSwitch=false
 }
-
-minAngleDeg = -45
-maxAngleDeg = 100
-coralLoad = -42 
-level_1 = - 25 
-level_2 = -8 
-level_3 = 20
-level_4 = 95
-angleOffset = 0.72
-maxSpeed = 0.5
-kP = 0.001
-kI= 0.0
-kD = 0.0
-kG = 0.001
-kVoltage = 0.0
-voltageReference = 12.5
-c 
