--- a/src/main/deploy/robotConfigs/SBSD/coralendeffector.conf
+++ b/src/main/deploy/robotConfigs/SBSD/coralendeffector.conf
@@ -24,3 +24,19 @@ coralAngle{
   hasForwardLimitSwitch=false
   hasReverseLimitSwitch=false
 }
+
+minAngleDeg = -45
+maxAngleDeg = 100
+coralLoad = -42 
+level_1 = - 25 
+level_2 = -8 
+level_3 = 20
+level_4 = 95
+angleOffset = 0.0
+maxSpeed = 0.5
+kP = 0.001
+kI= 0.0
+kD = 0.0
+kG = 0.001
+kVoltage = 0.0
+voltageReference = 12.5
