--- a/src/main/deploy/robotConfigs/SBSD/sensors.conf
+++ b/src/main/deploy/robotConfigs/SBSD/sensors.conf
@@ -1,5 +1,12 @@
 sensors {
-
+    endEffectorIntakeSensor{
+        port = 9
+        reversedPolarity=false
+    }
+    endEffectorEjectSensor{
+        port = 8
+        reversedPolarity=false
+    }
 }
 
 pigeon {
