kp and kg for comp bot

--- a/src/main/deploy/robotConfigs/SBSD/sbsdarm.conf
+++ b/src/main/deploy/robotConfigs/SBSD/sbsdarm.conf
@@ -18,7 +18,7 @@ armAngleRight{
   hasAbsoluteEncoder=true
   absoluteEncoderInverted = false
   absoluteEncoderZeroOffset = 0.0
-  inverted=false
+  inverted=true
   hasEncoder=true
   encoderInverted=false
   currentLimit=60
@@ -39,7 +39,7 @@ maxSpeed = 0.5
 kP = 0.0
 kI= 0.0
 kD = 0.0
-kG = 0.0
+kG = 0.02
 kVoltage = 0.0
 voltageReference = 12.5
  
