--- a/src/main/deploy/robotConfigs/SBSD/coralendeffector.conf
+++ b/src/main/deploy/robotConfigs/SBSD/coralendeffector.conf
@@ -23,12 +23,16 @@ coralAngle{
   brakeMode=true
   hasForwardLimitSwitch=false
   hasReverseLimitSwitch=false
+
+  absoluteEncoderInverted = false
+  absoluteEncoderZeroOffset = 0
+  encoderTicksPerRotation = 42
 }
 
 minAngleDeg = -45
 maxAngleDeg = 100
 coralLoad = -42 
-level_1 = - 25 
+level_1 = -25 
 level_2 = -8 
 level_3 = 20
 level_4 = 95
