angle offset needs to be implemented

--- a/src/main/deploy/robotConfigs/SBSD/sensors.conf
+++ b/src/main/deploy/robotConfigs/SBSD/sensors.conf
@@ -1,11 +1,11 @@
 sensors {
     endEffectorIntakeSensor{
         port = 9
-        reversedPolarity=false
+        reversedPolarity=true
     }
     endEffectorEjectSensor{
         port = 8
-        reversedPolarity=false
+        reversedPolarity=true
     }
 }
 
