--- a/src/main/deploy/robotConfigs/SBSD/sbsdarm.conf
+++ b/src/main/deploy/robotConfigs/SBSD/sbsdarm.conf
@@ -27,8 +27,9 @@ armAngleRight{
   hasReverseLimitSwitch=false
 }
 
-minAngleDeg = -61
+minAngleDeg = -82
 maxAngleDeg = 100
+climberPosition = -80.5 ##9 1/2 degrees was measured by CAD
 coralLoad = -45
 level_1 = -25 
 level_2 = -8 
@@ -42,4 +43,5 @@ kD = 0.0
 kG = 0.02
 kVoltage = 0.0
 voltageReference = 12.5
+tolerance = 1 ##Placeholder
  
