--- a/src/main/deploy/robotConfigs/SBSD/sbsdarm.conf
+++ b/src/main/deploy/robotConfigs/SBSD/sbsdarm.conf
@@ -30,6 +30,7 @@ armAngleRight{
 minAngleDeg = -82
 maxAngleDeg = 100
 climberPosition = -80.5 ##9 1/2 degrees was measured by CAD
+safetyAngle = -34 ##robot should not go below this angle if end effector is not in proper position
 coralLoad = -45
 level_1 = -25 
 level_2 = -8 
