added safety method fixed setting default command

--- a/src/main/deploy/robotConfigs/SBSD/coralendeffector.conf
+++ b/src/main/deploy/robotConfigs/SBSD/coralendeffector.conf
@@ -32,6 +32,8 @@ coralAngle{
 #all of these are for the rotate subsystem
 minAngleDeg = -40
 maxAngleDeg = 179.5
+#going off of memory so i could be wrong
+safeAngleDeg = 122
 #coralLoad used to be -42
 coralLoad = 177
 level_1 = -25 
