--- a/src/main/deploy/pathplanner/settings.json
+++ b/src/main/deploy/pathplanner/settings.json
@@ -20,7 +20,7 @@
   "defaultMaxAngVel": 540.0,
   "defaultMaxAngAccel": 720.0,
   "defaultNominalVoltage": 12.0,
-  "robotMass": 63.4802522,
+  "robotMass": 54.793958,
   "robotMOI": 108.47,
   "robotTrackwidth": 0.546,
   "driveWheelRadius": 0.048,
