--- a/src/main/deploy/robotConfigs/SBSD/sensors.conf
+++ b/src/main/deploy/robotConfigs/SBSD/sensors.conf
@@ -6,3 +6,49 @@ pigeon {
     id=26
 }
 
+photonvision {
+  useVisionForPose = true
+  numberOfCameras = 4
+  targetHeightInInches = 52.0675
+  targetCameraName = OV2311-2MP-60FPS-1
+  cameraName1 = OV2311-2MP-60FPS-1
+  cameraName2 = OV2311-2MP-60FPS-2
+  cameraName3 = OV2311-2MP-60FPS-3
+  cameraName4 = OV2311-2MP-60FPS-4
+  OV2311-2MP-60FPS-1 {
+    cameraOffsetToCenterInInches = 11.69
+    cameraOffsetToCenterInInchesY = 12.886
+    cameraHeightInInches = 8.993
+    cameraRollInDegrees = 0
+    cameraPitchInDegrees = 20
+    cameraYawInDegrees = -25 #335
+    offsetToSwerveModInches = 1.625
+  }
+  OV2311-2MP-60FPS-2 {
+    cameraOffsetToCenterInInches = 11.69
+    cameraOffsetToCenterInInchesY = -12.886
+    cameraHeightInInches = 8.993
+    cameraRollInDegrees = 0
+    cameraPitchInDegrees = 20
+    cameraYawInDegrees = 25
+    offsetToSwerveModInches = 1.625
+  }
+  OV2311-2MP-60FPS-3 {
+    cameraOffsetToCenterInInches = -11.69
+    cameraOffsetToCenterInInchesY = 12.886
+    cameraHeightInInches = 8.993
+    cameraRollInDegrees = 0
+    cameraPitchInDegrees = 20
+    cameraYawInDegrees = 205 
+    offsetToSwerveModInches = 1.625
+  }
+  OV2311-2MP-60FPS-4 {
+    cameraOffsetToCenterInInches = -11.69
+    cameraOffsetToCenterInInchesY = -12.886
+    cameraHeightInInches = 8.993
+    cameraRollInDegrees = 0
+    cameraPitchInDegrees = 20
+    cameraYawInDegrees = 155
+    offsetToSwerveModInches = 1.625
+  }
+}
