added the infrastructure code so the coral intake eject subsystem gets created. created a default command for this subsystem. started the code to intake a coral.

--- a/src/main/deploy/robotConfigs/SBSD/robot.conf
+++ b/src/main/deploy/robotConfigs/SBSD/robot.conf
@@ -1,5 +1,6 @@
 subsystems{
-  swervedrivetrain{}
-  sbsdarm{}
-  sbsdcoralendeffector{}
+  #swervedrivetrain{}
+  #sbsdarm{}
+  #sbsdcoralendeffector{}
+  sbsdcoralintakeeject{}
 }
