end effector angle works

--- a/src/main/deploy/robotConfigs/SBSD/coralendeffector.conf
+++ b/src/main/deploy/robotConfigs/SBSD/coralendeffector.conf
@@ -42,7 +42,7 @@ level_2 = 108
 level_3 = 77
 level_4 = -55
 angleOffset = 0.5873
-maxSpeed = 0.1
+maxSpeed = 0.05
 maxSpeedCloseToMax = 0.05
 closeToMaxAngleDeg = 115
 kP = 1.0
@@ -50,4 +50,5 @@ kI = 0.0
 kD = 0.0
 kG = 0.0
 kVoltage = 0.0
+tolerance = 1
 voltageReference = 12.5
