allowed for teleop commands to be canceled. also started to add finishing for auto period.

--- a/src/main/deploy/robotConfigs/SBSD/coralendeffector.conf
+++ b/src/main/deploy/robotConfigs/SBSD/coralendeffector.conf
@@ -30,9 +30,9 @@ coralAngle{
 }
 
 #all of these are for the rotate subsystem
-minAngleDeg = -85
+minAngleDeg = -85 # see line 43
 maxAngleDeg = 130
-#going off of memory so i could be wrong
+#going off of memory so I could be wrong
 safeAngleDeg = 77
 #coralLoad used to be -42
 climberPosition = 127
@@ -40,9 +40,9 @@ coralLoad = 127
 level_1 = 127
 level_2 = 108
 level_3 = 77
-level_4 = -55
+level_4 = -54 # tried 87 for slippage -> did not work
 angleOffset = 0.5873
-maxSpeed = 0.05
+maxSpeed = 0.025 # was 0.5
 maxSpeedCloseToMax = 0.05
 closeToMaxAngleDeg = 115
 kP = 1.0
