--- a/src/main/deploy/robotConfigs/SBSD/sbsdarm.conf
+++ b/src/main/deploy/robotConfigs/SBSD/sbsdarm.conf
@@ -1,6 +1,7 @@
 ports {
   armAngleLeft = 13
   armAngleRight = 14
+  algaeRemovalWheels = 12
 }
 
 armAngleLeft{
@@ -27,6 +28,18 @@ armAngleRight{
   hasReverseLimitSwitch=false
 }
 
+algaeRemovalWheels{
+  hasAbsoluteEncoder=false
+  inverted=false
+  hasEncoder= true 
+  encoderInverted=false
+  currentLimit=60
+  brakeMode=true
+  hasForwardLimitSwitch=false
+  hasReverseLimitSwitch=false
+  }
+
+
 minAngleDeg = -82
 maxAngleDeg = 100
 climberPosition = -80.5 ##9 1/2 degrees was measured by CAD
@@ -38,6 +51,7 @@ level_3 = 20
 level_4 = 95
 angleOffset = 0.589316
 maxSpeed = 0.5
+algaeRemovalWheelsSpeed = 0.0
 kP = 0.2
 kI= 0.0
 kD = 0.0
