--- a/src/main/deploy/robotConfigs/SBSD/robot.conf
+++ b/src/main/deploy/robotConfigs/SBSD/robot.conf
@@ -1,6 +1,6 @@
 subsystems{
-  #swervedrivetrain{}
-  #sbsdarm{}
-  #sbsdcoralendeffector{}
+  swervedrivetrain{}
+  sbsdarm{}
+  sbsdcoralendeffector{}
   sbsdcoralintakeeject{}
 }
