--- a/src/main/deploy/robotConfigs/SBSD/sbsdarm.conf
+++ b/src/main/deploy/robotConfigs/SBSD/sbsdarm.conf
@@ -27,7 +27,7 @@ armAngleRight{
   hasReverseLimitSwitch=true
 }
 
-minAngleDeg = -82
+minAngleDeg = -50
 maxAngleDeg = 100
 climberPosition = -80.5 ##9 1/2 degrees was measured by CAD
 safetyAngle = -61 ##robot should not go below this angle if end effector is not in proper position
@@ -37,8 +37,9 @@ level_2 = -8
 level_3 = 20
 level_4 = 95
 angleOffset = 0.589316
-maxSpeed = 0.5
-kP = 0.2
+maxSpeedUp = 1.0
+maxSpeedDown = 0.4
+kP = 0.5
 kI= 0.0
 kD = 0.0
 kG = 0.02
