algae removal wheels run when going to score on level 2 and 3

--- a/src/main/deploy/robotConfigs/SBSD/sbsdarm.conf
+++ b/src/main/deploy/robotConfigs/SBSD/sbsdarm.conf
@@ -31,7 +31,7 @@ armAngleRight{
 algaeRemovalWheels{
 minAngleDeg = -50
   hasAbsoluteEncoder=false
-  inverted=false
+  inverted=true
   hasEncoder= true 
   encoderInverted=false
   currentLimit=60
@@ -42,6 +42,7 @@ minAngleDeg = -50
 
 
 maxAngleDeg = 100
+minAngleDeg = -50
 climberPosition = -80.5 ##9 1/2 degrees was measured by CAD
 safetyAngle = -61 ##robot should not go below this angle if end effector is not in proper position
 coralLoad = -45
