added commands to put other subsystems into climber mode

--- a/src/main/deploy/robotConfigs/SBSD/sbsdclimber.conf
+++ b/src/main/deploy/robotConfigs/SBSD/sbsdclimber.conf
@@ -1,3 +1,14 @@
 ports{ 
   climberWinch = 15
 }
+
+winchMotor{
+  hasAbsoluteEncoder=false
+  inverted=false
+  hasEncoder=true
+  encoderInverted=false
+  currentLimit=60
+  brakeMode=true
+  hasForwardLimitSwitch=false
+  hasReverseLimitSwitch=false
+}
