working on setting climber mode for arm and ee subsystems

--- a/src/main/deploy/robotConfigs/SBSD/robot.conf
+++ b/src/main/deploy/robotConfigs/SBSD/robot.conf
@@ -1,6 +1,7 @@
 subsystems{
-  swervedrivetrain{}
+  #swervedrivetrain{}
   sbsdarm{}
   sbsdcoralendeffector{}
-  sbsdcoralintakeeject{}
+  #sbsdcoralintakeeject{}
+  sbsdclimber{}
 }
