--- a/src/main/deploy/robotConfigs/SBSD/sbsdclimber.conf
+++ b/src/main/deploy/robotConfigs/SBSD/sbsdclimber.conf
@@ -1,5 +1,5 @@
 ports{ 
-  climberWinch = 15
+  winchMotor = 15
 }
 
 winchMotor{
@@ -13,4 +13,4 @@ winchMotor{
   hasReverseLimitSwitch=false
 }
 
-climbSpeed = 0.5
+climbSpeed = 0.0
