untested config for the field april tags

--- a/src/main/deploy/robotConfigs/SBSD/sensors.conf
+++ b/src/main/deploy/robotConfigs/SBSD/sensors.conf
@@ -15,6 +15,7 @@ pigeon {
 
 photonvision {
   useVisionForPose = true
+  useAndyMarkField = false
   numberOfCameras = 4
   targetHeightInInches = 52.0675
   targetCameraName = OV2311-2MP-60FPS-1
