--- a/src/main/deploy/pathplanner/settings.json
+++ b/src/main/deploy/pathplanner/settings.json
@@ -20,8 +20,8 @@
   "defaultMaxAngVel": 540.0,
   "defaultMaxAngAccel": 720.0,
   "defaultNominalVoltage": 12.0,
-  "robotMass": 54.793958,
-  "robotMOI": 108.47,
+  "robotMass": 54.794,
+  "robotMOI": 7.39,
   "robotTrackwidth": 0.546,
   "driveWheelRadius": 0.048,
   "driveGearing": 6.75,
@@ -29,7 +29,7 @@
   "driveMotorType": "krakenX60",
   "driveCurrentLimit": 60.0,
   "wheelCOF": 1.2,
-  "flModuleX": 0.3014471,
+  "flModuleX": 0.301,
   "flModuleY": 0.3014471,
   "frModuleX": 0.3014471,
   "frModuleY": -0.3014471,
