andymark field works now

--- a/src/main/deploy/robotConfigs/SBSD/sensors.conf
+++ b/src/main/deploy/robotConfigs/SBSD/sensors.conf
@@ -15,7 +15,7 @@ pigeon {
 
 photonvision {
   useVisionForPose = true
-  useAndyMarkField = false
+  useAndyMarkField = true
   numberOfCameras = 4
   targetHeightInInches = 52.0675
   targetCameraName = OV2311-2MP-60FPS-1
