--- a/src/main/deploy/robotConfigs/SBSD/sbsdarm.conf
+++ b/src/main/deploy/robotConfigs/SBSD/sbsdarm.conf
@@ -41,8 +41,8 @@ minAngleDeg = -50
   }
 
 
-maxAngleDeg = 100
-minAngleDeg = -50
+maxAngleDeg = 110
+minAngleDeg = -50 ##fix this
 climberPosition = -80.5 ##9 1/2 degrees was measured by CAD
 safetyAngle = -61 ##robot should not go below this angle if end effector is not in proper position
 coralLoad = -40
