added servo to climber subsystem

--- a/src/main/deploy/robotConfigs/SBSD/sbsdclimber.conf
+++ b/src/main/deploy/robotConfigs/SBSD/sbsdclimber.conf
@@ -13,4 +13,10 @@ winchMotor{
   hasReverseLimitSwitch=false
 }
 
+servoMotor{
+  port = 0 #placeholder for the actual port number 
+}
+
 climbSpeed = 0.0
+reverseClimbSpeed = 0.0
+servoMotorAngle = 0.0
