made the pid for algae - untested

--- a/src/main/deploy/robotConfigs/SBSD/algaemanipulator.conf
+++ b/src/main/deploy/robotConfigs/SBSD/algaemanipulator.conf
@@ -1,12 +1,12 @@
 ports{
-  intakeWheels = 16 
-  pickupMotor = 17 
+  intakeWheels = 16
+  pickupMotor = 17
 }
 
 intakeWheels{
   hasAbsoluteEncoder=false
   inverted=false
-  hasEncoder= true 
+  hasEncoder=true
   encoderInverted=false
   currentLimit=60
   brakeMode=true
@@ -17,7 +17,7 @@ intakeWheels{
 pickupMotor{
   hasAbsoluteEncoder=false
   inverted=false
-  hasEncoder= true 
+  hasEncoder=true
   encoderInverted=false
   currentLimit=60
   brakeMode=true
@@ -29,7 +29,8 @@ intakeWheelSpeed = 0.2
 ejectWheelSpeed = 0.2
 deploySpeed = 0.2
 retractSpeed = 0.2
-deployAngle = 0.0 
+deployAngle = 0.0
+retractAngle = 0.0
 kP = 0.0
 kI = 0.0
 kD = 0.0
