--- a/src/main/deploy/robotConfigs/SBSD/robot.conf
+++ b/src/main/deploy/robotConfigs/SBSD/robot.conf
@@ -2,6 +2,7 @@ subsystems{
   swervedrivetrain{}
   sbsdarm{}
   sbsdcoralendeffector{}
-  WS2812LEDs {}
+  WS2812LEDs{}
   sbsdcoralintakeeject{}
+  algaemanipulator{}
 }
