added comments to the state machine

--- a/src/main/deploy/robotConfigs/SBSD/algaemanipulator.conf
+++ b/src/main/deploy/robotConfigs/SBSD/algaemanipulator.conf
@@ -30,7 +30,7 @@ ejectWheelSpeed = 0.2
 deploySpeed = 0.2
 retractSpeed = 0.2
 deployAngle = 0.0
-retractAngle = 0.0
+retractAngle = 90.0 ##untested
 kP = 0.0
 kI = 0.0
 kD = 0.0
